# SalesAssistant

./: .gitignore  prompt.md
deep_dive_sales_assistant/: .env.example  Makefile  README.md  prospect.py  pyproject.toml
deep_dive_sales_assistant/src/: __init__.py  llm.py
deep_dive_sales_assistant/src/services/: __init__.py  builtwith.py  resolver.py  sonar.py  utils.py
deep_dive_sales_assistant/tests/: __init__.py  test_services.py
